Register and Login

--- a/FPTBookWebClient/FPTBookWebClient.csproj
+++ b/FPTBookWebClient/FPTBookWebClient.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Areas\Admins\Models\" />
     <Folder Include="Areas\Owners\Data\" />
     <Folder Include="Areas\Owners\Models\" />
+    <Folder Include="wwwroot\ProfilePicture\" />
   </ItemGroup>
 
 </Project>
