--- a/FPTBookWebClient/appsettings.Production.json
+++ b/FPTBookWebClient/appsettings.Production.json
@@ -1,9 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "BaseAddress": "https://localhost:8080"
+  "BaseAddress": "http://localhost:8000"
 }
