--- a/FPTBookAPI/FPTBookAPI.csproj
+++ b/FPTBookAPI/FPTBookAPI.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\EmailService\EmailService.csproj" />
 		<ProjectReference Include="..\Repositories\Repositories.csproj" />
 	</ItemGroup>
 
