--- a/FPTBookWebClient/FPTBookWebClient.csproj
+++ b/FPTBookWebClient/FPTBookWebClient.csproj
@@ -28,6 +28,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
+		<ProjectReference Include="..\EmailService\EmailService.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
