Create reset password

--- a/FPTBookWebClient/appsettings.json
+++ b/FPTBookWebClient/appsettings.json
@@ -13,7 +13,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "UserName": "ndquang5802@gmail.com",
-    "Password": "vquyqldtfzljwcpd"
+    "Password": "mizftdcffktskazd"
   },
   "AllowedHosts": "*"
 }
